--- a/index.html
+++ b/index.html
@@ -25,15 +25,20 @@
                 <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      <h4 class="modal-title fs-5 p-1" id="exampleModalLabel">Create a new post</h4>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-xmark"></i></button>
                     </div>
                     <div class="modal-body">
-                      ...
+                    <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label"><strong>Caption:</strong></label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="2" placeholder="Add the caption of your post here"></textarea>
+                    <button type="button" class="btn btn-light m-1 border "><i class="fa-solid fa-camera"></i></button>
+                    <button type="button" class="btn btn-light m-1 border "><i class="fa-solid fa-location-dot"></i></button>
                     </div>
-                    <div class="modal-footer">
+                    </div>
+                    <div class="modal-footer border-top">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      <button type="button" class="btn btn-primary">Save changes</button>
+                      <button type="button" class="btn btn-success">Publish</button>
                     </div>
                   </div>
                 </div>
